fix responsive for form on iPhone 13 Pro

--- a/BradfordMarkelStyleSheet.css
+++ b/BradfordMarkelStyleSheet.css
@@ -361,7 +361,7 @@ textarea {
 
 @media screen and (max-width: 400px) {
 .input-textarea {
-    width: 45%;
+    width: 44%;
 }
 }
 
